added task 11 - refactoring, tests